css/styles.css
:root {
  --purple: rgb(123, 31, 162);
  --violet: rgb(103, 58, 183);
  --pink: rgb(244, 143, 177);
  --gradient:
    linear-gradient(
      to right,
      var(--purple),
      var(--violet),
      var(--pink),
      var(--purple)
    );
}

.close-navbar-toggler {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 1;
  cursor: pointer;
}

.close-navbar-toggler.collapsed {
  z-index: -1;
}

.navbar {
  z-index: 2;
}

.navbar-toggler {
  width: 25px;
  height: 20px;
  position: relative;
  transition: 0.5s ease-in-out;
}

.navbar-toggler,
.navbar-toggler:focus,
.navbar-toggler:active {
  outline: none;
  box-shadow: none;
  border: 0;
}

.toggler-icon {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  animation: background-pan 3s linear infinite;
  background: var(--gradient);
  background-size: 200%;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  transform: rotate(0deg);
  transition: 0.25s ease-in-out;
}

.navbar-toggler .top-bar {
  top: inherit;
  transform: rotate(135deg);
}

.navbar-toggler .middle-bar {
  opacity: 0;
  top: inherit;
}

.navbar-toggler .bottom-bar {
  top: inherit;
  transform: rotate(-135deg);
}

.navbar-toggler.collapsed .top-bar {
  position: absolute;
  top: 0;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .middle-bar {
  position: absolute;
  top: 10px;
  opacity: 1;
}

.navbar-toggler.collapsed .bottom-bar {
  position: absolute;
  top: 20px;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .toggler-icon {
  animation: background-pan 3s linear infinite;
  background: var(--gradient);
  background-size: 200%;
}

.nav-border {
  margin-top: 1rem;
  width: 100%;
  height: 1px;
  animation: background-pan 3s linear infinite;
  background: var(--gradient);
  background-size: 200%;
}

#cycle span {
  position: absolute;
  width: 100%;
  text-align: center;
  white-space: nowrap;
  opacity: 0;
  animation: cycle-titles 20s linear infinite;
}

#cycle span:nth-child(2) {
  animation-delay: 5s;
}

#cycle span:nth-child(3) {
  animation-delay: 10s;
}

#cycle span:nth-child(4) {
  animation-delay: 15s;
}

@media (hover: hover) {
  a:hover {
    cursor: pointer;
  }
}

@keyframes cycle-titles {
  0% {
    opacity: 0;
  }

  1% {
    transform: translateX(-20px);
  }

  4% {
    opacity: 0;
  }

  5% {
    opacity: 1;
    transform: translateX(0);
  }

  17% {
    opacity: 1;
    transform: translateX(0);
  }

  19% {
    opacity: 0;
  }

  20% {
    transform: translateX(20px);
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

@keyframes background-pan {
  from {
    background-position: 0% center;
  }

  to {
    background-position: -200% center;
  }
}

